# valhalla-client-rs

./: Cargo.toml  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  rust.yml  test.yml
src/: elevation.rs  lib.rs  matrix.rs  route.rs  shapes.rs  status.rs  trace_attributes.rs
src/costing/: auto.rs  bicycle.rs  mod.rs  motor_scooter.rs  motorcycle.rs  multimodal.rs  pedestrian.rs  transit.rs  truck.rs
src/route/: mod.rs
src/route/costing/: auto.rs  bicycle.rs  bikeshare.rs  bus.rs  hov.rs  mod.rs  motor.rs  motor_scooter.rs  motorcycle.rs  multimodal.rs  pedestrian.rs  taxi.rs  transit.rs  truck.rs
