[package]
name = "valhalla-client"
version = "0.3.0"
edition = "2021"
description = "API client for the Valhalla routing engine"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>", "Frank Elsinga <frank.elsinga@tum.de>"]
license = "Apache-2.0"
repository = "https://github.com/jelmer/valhalla-client-rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
geo-types = "0.7"
gpx = { version = "0.10", optional = true }
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_repr = "0.1.19"
serde_with = "3.12.0"
url = "2.5.4"

[features]
default = ["gpx"]
gpx = ["dep:gpx"]
