[package]
name = "valhalla-client"
version = "0.5.0"
edition = "2021"
description = "API client for the Valhalla routing engine"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>", "Frank Elsinga <frank.elsinga@tum.de>"]
license = "Apache-2.0"
repository = "https://github.com/jelmer/valhalla-client-rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
geo-types = "0.7"
gpx = { version = "0.10", optional = true }
log = "0.4.28"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
serde_with = "3.14.0"
url = "2.5.7"
tokio = { version = "1", default-features = false, optional = true }

[features]
default = ["gpx", "blocking"]
gpx = ["dep:gpx"]
blocking = ["dep:tokio"]
